--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   english_words: ^3.1.0
   word_break_text: ^0.1.0
   wrapped_korean_text: ^0.0.2
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
