--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   word_break_text: ^0.1.0
   wrapped_korean_text: ^0.0.2
   flutter_switch: ^0.3.2
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
