--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
   flutter_login: ^1.0.15
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
