--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^1.2.3
   flutter_login: ^1.0.15
   qr_flutter: ^4.0.0
+  flutter_kakao_map: ^0.0.4
 
 dev_dependencies:
   flutter_test:
