--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_login: ^1.0.15
   qr_flutter: ^4.0.0
   flutter_kakao_map: ^0.0.4
+  geolocator: ^6.2.1
+  otp_screen: ^0.0.3
+
 
 dev_dependencies:
   flutter_test:
