--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   qr_flutter: ^4.0.0
   flutter_kakao_map: ^0.0.4
   geolocator: ^6.2.1
-  otp_screen: ^0.0.3
+  otp_text_field: ^1.1.1
 
 
 dev_dependencies:
