--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,15 @@
                 />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <category android:name="android.intent.category.LAUNCHER"/>
+
+                <data android:host="oauth"
+                    android:scheme="kakao{a658d6d7d03dd2614db3cacee0b00787}" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
@@ -40,6 +48,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.kakao.sdk.AppKey" android:value="a658d6d7d03dd2614db3cacee0b00787"/>
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="tvo0ud57ph"/>
 
     </application>
 
