--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,13 @@ dependencies:
   equatable: ^1.2.3
   flutter_login: ^1.0.15
   qr_flutter: ^4.0.0
-  flutter_kakao_map: ^0.0.4
   geolocator: ^6.2.1
   otp_text_field: ^1.1.1
+  permission_handler: ^5.1.0+2
+
+  naver_map_plugin: ^0.9.6
+  flutter_kakao_map: ^0.0.4
+  kakao_flutter_sdk: ^0.7.0
 
 
 dev_dependencies:
